--- a/projeto site thialy/index.html
+++ b/projeto site thialy/index.html
@@ -6,9 +6,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thialy Muniz</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styleindex.css">
+   
 </head>
-<body>
+<body id="container">
+    <nav>
+        <a href="#">Cursos</a>
+        <a href="#">Atendimento</a>
+        <a href="#">Fale Comigo</a>
+        
+    </nav>
+    <header>
     <h1> Psicológa Thialy Muniz</h1>
+    <h2> Te ajudo a lidar com seus sentimentos <br> através da inteligência emocional.</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis 
+        dicta in officia, necessitatibus est sed ipsum atque, cumque amet,
+         quasi consequatur adipisci. Recusandae rem cum nisi dolorem a non 
+         ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo quas 
+         error, recusandae perspiciatis, molestias hic laboriosam non repellendus 
+         optio expedita laborum? Magnam, asperiores ipsum. Eveniet quia ex
+          molestias ad nihil.</p>
+
+    </header>
+        <main id="conteudo">
+            <h1>Thialy Muniz</h1>
+            <h2>Quem sou eu?</h2>
+            <p>psicologa clinica Infantil, Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Ea magnam </p>
+            <h2>Especialidades</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Cumque officiis accusamus corporis animi perspiciatis
+                </p>
+            <h2>Linha de Atuação</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Nam suscipit quam nisi.</p>
+        </main>
+  <article>
+    <div class="link" id="terapia">
+<p>O que é terapia?</p>
+    </div>
+    <div class="link" id="ig">
+<p>Instagram</p>
+    </div>
+  </article>
+
+  <footer>
+    Developer Jason Correia
+  </footer>
     
 </body>
 </html>
