--- a/projeto site thialy/index.html
+++ b/projeto site thialy/index.html
@@ -13,7 +13,7 @@
     <nav>
         <a href="#">Cursos</a>
         <a href="#">Atendimento</a>
-        <a href="#">Fale Comigo</a>
+        <a href="#">Contato</a>
         
     </nav>
     <header>
@@ -23,9 +23,7 @@
         dicta in officia, necessitatibus est sed ipsum atque, cumque amet,
          quasi consequatur adipisci. Recusandae rem cum nisi dolorem a non 
          ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo quas 
-         error, recusandae perspiciatis, molestias hic laboriosam non repellendus 
-         optio expedita laborum? Magnam, asperiores ipsum. Eveniet quia ex
-          molestias ad nihil.</p>
+         error, recu.</p>
 
     </header>
         <main id="conteudo">
