--- a/exercicios/ex32mediaqueries/mq004/index.html
+++ b/exercicios/ex32mediaqueries/mq004/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
         <h1>Jason Correia</h1>
-        <menu>
+        <span id="itens" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+        <menu id="menu">
             <ul>
                 <li><a href="#">Noticías</a></li>
                 <li><a href="#">Esportes</a></li>
@@ -39,6 +41,15 @@
         </article>
 
     </main>
+    <script>
+function clickMenu() {
+    if (menu.style.display == 'block'){
+        menu.style.display = 'none'
+    } else {
+        menu.style.display = 'block'
+    }
+}
+    </script>
 </body>
 <footer>
     <p>site de jason correia </p>
