--- a/exercicios/ex32mediaqueries/mq004/index.html
+++ b/exercicios/ex32mediaqueries/mq004/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>estudos css</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
+    
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Jason Correia</h1>
-        <span id="itens" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
-        <menu id="menu">
+        <i id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</i>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Noticías</a></li>
                 <li><a href="#">Esportes</a></li>
@@ -42,16 +43,25 @@
 
     </main>
     <script>
-function clickMenu() {
-    if (menu.style.display == 'block'){
-        menu.style.display = 'none'
+
+function mudouTamanho(){
+    if (window.innerWidth >= 768){
+        itens.style.display = 'block'
     } else {
-        menu.style.display = 'block'
+        itens.style.display = 'none'
+    }
+}
+
+function clickMenu() {
+    if (itens.style.display == 'block'){
+        itens.style.display = 'none'
+    } else {
+        itens.style.display = 'block'
     }
 }
     </script>
 </body>
 <footer>
-    <p>site de jason correia </p>
+    <p>site de jason correia</p>
 </footer>
 </html>
